# minizip-cmake

./: CMakeLists.txt
src/: CMakeLists.txt
test/: CMakeLists.txt  main.cpp
